--- a/Maquetacion/main.css
+++ b/Maquetacion/main.css
@@ -58,3 +58,47 @@ header h1:hover {
 header a {
   color: #70b231;
 }
+
+nav {
+  background-color: #333;
+  width: 100%;
+  height: 40px;
+  color: white;
+  font-family: sans-serif;
+  box-shadow: 0px 0px 2px gray;
+  justify-content: center;
+}
+
+#nav ul {
+  list-style: none;
+  text-decoration: none;
+  margin-left: 170px;
+  width: 1300px;
+}
+nav a {
+  text-decoration: none;
+  color: white;
+}
+
+#nav > ul > li {
+  line-height: 40px;
+  float: left;
+  border-right: 1px solid gray;
+  transition: all 200ms;
+}
+
+#nav > ul > li a {
+  display: block;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+#nav #child {
+  border-left: 1px solid gray;
+}
+
+#nav li:hover {
+  background-color: #70b231;
+  box-shadow: 0px 0px 4px green inset;
+}
